<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:divider="@drawable/ic_divider_notification"
        android:dividerPadding="16dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_prayer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                style="@style/Notification.Title"
                tools:text="Imsak" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/v_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="@drawable/ic_divider_notification_checkbox"
            android:padding="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/cb_vibrate"
                    android:text="@string/label_notification" />

                <CheckBox
                    android:id="@+id/cb_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/label_vibrate" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:drawableLeft="@drawable/ic_btn_audio"
                android:text="@string/label_set_reminder_tone"
                android:background="?selectableItemBackground"
                android:drawablePadding="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                style="?checkboxStyle" />

            <Button
                android:id="@+id/btn_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:drawableLeft="@drawable/ic_btn_audio"
                android:text="@string/label_set_notification_tone"
                android:background="?selectableItemBackground"
                android:drawablePadding="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                style="?checkboxStyle" />

        </LinearLayout>

    </LinearLayout>

</merge>
