<resources>
    <string name="app_name">Malaysia Prayer Times</string>
    <string name="app_name_short">Prayer Times</string>

    <string name="donate_contribute">Contribute</string>
    <string name="donate_digitalocean">Referral Link</string>
    <string name="donate_extra_support">Extra Support</string>
    <string name="donate_github">Github Page</string>
    <string name="donate_mbb">MBB-152068940752</string>
    <string name="donate_share">Share</string>
    <string name="donate_share_subject">Take a look at "Malaysia Prayer Times"</string>
    <string name="donate_share_via">Share "Malaysia Prayer Times" via</string>
    <string name="donate_spread_the_word">Spread The Word</string>
    <string name="donate_text_1">Alhamdullilah. Thank you for your interest in donating towards Malaysia Prayer Times.</string>
    <string name="donate_text_2">You can help MPT by spreading the word! Share your experience in using MPT with your friends!</string>
    <string name="donate_text_3">MPT is now open sourced on GitHub and hosted on DigitalOcean.
        \n\nIf you are a developer you can improve MPT codes.
        You can create a DigitalOcean account with the referral link if you do not have one yet.</string>
    <string name="donate_text_4">If you would like to further support MPT\'s development, you can donate to Noorzaini Ilhami.
        \n\nMPT will always remain as a free app with no advertisements.</string>

    <string name="error_no_location">Oops! Have you enabled your location settings?</string>
    <string name="error_no_network">Oops! Have you checked your internet connection?</string>
    <string name="error_play_service">Uhoh! There is something wrong with Play Services!</string>
    <string name="error_server">Oops! There might be something wrong with the server!</string>
    <string name="error_undetectable_location">Uhoh! We are unable to recognize your location!</string>
    <string name="error_unexpected">Uhoh! We are not expecting this error!</string>

    <string name="label_mosque">Mosques</string>
    <string name="label_prayer">Prayer Times</string>
    <string name="label_retry">Retry</string>
    <string name="label_qibla">Qibla</string>
    <string name="label_widget_bar">Prayer Times Bar</string>
    <string name="label_widget_mini">Prayer Times Mini</string>
    <string name="label_widget_text">Prayer Times Text</string>

</resources>
